@@ -44,6 +44,7 @@ Version 1.3.14+svn:
    * Made unit to hideable by others units (bug #10877)
    * Make wesnoth work properly again if the datadir contains ../
    * Fixed some type of addon not being uninstallable (bug #10788)
+   * fixed adjacent units to update if unit affects them
    * converted NO_MAP_DATA to new map format
    * fixed unchecked vector access
    * make sure the python campaign client list shows a space between the 
